@@ -1,3 +1,7 @@
+Apr 18, 2023
+  parser: added 'NIHhESC' to list of ignored XDB IDS
+  parser: fixed handling of some comments
+
 Jan 24, 2023
   updated build.gradle to be gradle 6.x + compatible
 
